--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,21 @@ services:
       - zookeeper-1
     links:
       - zookeeper-1
+  producer-1:
+    image: producer
+    build:
+      context: service-producer
+    ports:
+      - "8081:8080"
+  producer-2:
+    image: producer
+    build:
+      context: service-producer
+    ports:
+      - "8082:8080"
+  producer-3:
+    image: producer
+    build:
+      context: service-producer
+    ports:
+      - "8083:8080"
