--- a/service-producer/Dockerfile
+++ b/service-producer/Dockerfile
@@ -1,5 +1,13 @@
+# Build stage
+FROM maven:latest AS builder
+WORKDIR /service-producer
+COPY src /service-producer/src
+COPY pom.xml /service-producer/pom.xml
+RUN mvn clean package -P docker
+
+# Runtime stage
 FROM openjdk:21-jdk
-WORKDIR /app
-COPY target/*.jar app.jar
+WORKDIR /service-producer
+COPY --from=builder /service-producer/target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
