--- a/service-producer/pom.xml
+++ b/service-producer/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<description>CQRS Application</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -35,15 +35,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter</artifactId>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.cloud</groupId>-->
-<!--			<artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>-->
-<!--		</dependency>-->
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -61,7 +60,25 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
+	<profiles>
+    <profile>
+      <id>local</id>
+        <activation>
+          <activeByDefault>true</activeByDefault>
+        </activation>
+      <properties>
+        <spring.profiles.active>local</spring.profiles.active>
+        <environment>local</environment>
+      </properties>
+    </profile>
+    <profile>
+      <id>docker</id>
+      <properties>
+        <spring.profiles.active>docker</spring.profiles.active>
+        <environment>docker</environment>
+      </properties>
+    </profile>
+  </profiles>
 	<build>
 		<plugins>
 			<plugin>
