--- a/serviceconsumer/Dockerfile
+++ b/serviceconsumer/Dockerfile
@@ -1,7 +1,8 @@
 FROM maven:latest AS builder
 WORKDIR /serviceconsumer
-COPY src /serviceconsumer/src
 COPY pom.xml /serviceconsumer/pom.xml
+RUN mvn verify clean --fail-never
+COPY src /serviceconsumer/src
 RUN mvn clean package -P docker
 
 
@@ -10,4 +11,4 @@ WORKDIR /serviceconsumer
 COPY --from=builder /serviceconsumer/target/*.jar app.jar
 RUN echo $(ls -al .)
 EXPOSE 8080
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-Dspring.profiles.active=docker","-jar","app.jar"]
