--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ networks:
     driver: bridge
   consumer-zookeeper:
     driver: bridge
+  kafka-zookeeper:
+    driver: bridge
+  kafka:
+    driver: bridge
 
 services:
   zookeeper-1:
@@ -23,6 +27,7 @@ services:
       - zookeeper
       - producer-zookeeper
       - consumer-zookeeper
+      - kafka-zookeeper
 
   zookeeper-2:
     image: confluentinc/cp-zookeeper:latest
@@ -36,6 +41,7 @@ services:
       - zookeeper
       - producer-zookeeper
       - consumer-zookeeper
+      - kafka-zookeeper
 
   zookeeper-3:
     image: confluentinc/cp-zookeeper:latest
@@ -49,6 +55,7 @@ services:
       - zookeeper
       - producer-zookeeper
       - consumer-zookeeper
+      - kafka-zookeeper
 
   zk_web:
     image: elkozmon/zoonavigator:latest
@@ -123,3 +130,77 @@ services:
       - consumer
       - consumer-zookeeper
       - producer-zookeeper
+  kafka-1:
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "9092:9092"
+      - "29092:29092"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181,zookeeper-2:2182,zookeeper-3:2183"
+      KAFKA_BROKER_ID: 1
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+    networks:
+      - kafka-zookeeper
+      - kafka
+      - producer-zookeeper
+      - consumer-zookeeper
+ 
+  kafka-2:
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "9093:9093"
+      - "29093:29093"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-2:19093,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9093,DOCKER://host.docker.internal:29093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181,zookeeper-2:2182,zookeeper-3:2183"
+      KAFKA_BROKER_ID: 2
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+    networks:
+      - kafka-zookeeper
+      - kafka
+      - producer-zookeeper
+      - consumer-zookeeper
+ 
+  kafka-3:
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "9094:9094"
+      - "29094:29094"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-3:19094,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9094,DOCKER://host.docker.internal:29094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper-1:2181,zookeeper-2:2182,zookeeper-3:2183"
+      KAFKA_BROKER_ID: 3
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+    networks:
+      - kafka-zookeeper
+      - kafka
+      - producer-zookeeper
+      - consumer-zookeeper
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - 8085:8080
+    environment:
+      DYNAMIC_CONFIG_ENABLED: 'true'
+      KAFKA_CLUSTERS_0_NAME: cqrs_ui
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-1:29092,kafka-2:29093,kafka-3:29094
+    networks:
+      - kafka
+      - kafka-zookeeper
