Completed kafka topics via script and created Consumer producer and subscriber

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ networks:
     driver: bridge
   kafka:
     driver: bridge
+  producer-kafka:
+    driver: bridge
 
 services:
   zookeeper-1:
@@ -85,6 +87,7 @@ services:
     networks:
       - producer
       - producer-zookeeper
+      - producer-kafka
 
   producer-2:
     hostname: producer-2
@@ -100,6 +103,7 @@ services:
     networks:
       - producer
       - producer-zookeeper
+      - producer-kafka
 
   producer-3:
     hostname: producer-3
@@ -115,6 +119,7 @@ services:
     networks:
       - producer
       - producer-zookeeper
+      - producer-kafka
 
   consumer:
     image: service-consumer
@@ -148,8 +153,8 @@ services:
     networks:
       - kafka-zookeeper
       - kafka
-      - producer-zookeeper
       - consumer-zookeeper
+      - producer-kafka
  
   kafka-2:
     image: confluentinc/cp-kafka:latest
@@ -169,8 +174,8 @@ services:
     networks:
       - kafka-zookeeper
       - kafka
-      - producer-zookeeper
       - consumer-zookeeper
+      - producer-kafka
  
   kafka-3:
     image: confluentinc/cp-kafka:latest
@@ -190,8 +195,8 @@ services:
     networks:
       - kafka-zookeeper
       - kafka
-      - producer-zookeeper
       - consumer-zookeeper
+      - producer-kafka
   kafka-ui:
     container_name: kafka-ui
     image: provectuslabs/kafka-ui:latest
