--- a/service-producer/pom.xml
+++ b/service-producer/pom.xml
@@ -58,6 +58,10 @@
 			<artifactId>spring-integration-zookeeper</artifactId>
 			<version>6.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
