--- a/serviceconsumer/src/main/resources/application.properties
+++ b/serviceconsumer/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=serviceconsumer
 logging.level.com.example.serviceconsumer = DEBUG
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=events
