--- a/serviceconsumer/src/main/resources/application-docker.yml
+++ b/serviceconsumer/src/main/resources/application-docker.yml
@@ -5,3 +5,11 @@ spring:
   cloud:
     zookeeper:
       connect-string: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
+  data:
+    mongodb:
+      host: mongodb
+      port: 27017
+      database: "events"
+
+mongo:
+  host: mongodb
