integrated Kafka producer and consumer.

--- a/service-producer/src/main/resources/application-local.properties
+++ b/service-producer/src/main/resources/application-local.properties
@@ -1,1 +1,2 @@
 spring.cloud.zookeeper.connect-string=localhost:2181,localhost:2182,localhost:2183
+spring.kafka.bootstrap-servers=localhost:29092,localhost:29093,localhost:29094
