--- a/serviceconsumer/src/main/resources/application.properties
+++ b/serviceconsumer/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+server.port=8080
 spring.application.name=serviceconsumer
 logging.level.com.example.serviceconsumer = DEBUG
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=events
+kafka.topic.command=command-topic
+kafka.topic.query=query-topic
+kafka.topic.result=result-topic
+kafka.topic.group=my-group
