--- a/service-producer/src/main/resources/application.properties
+++ b/service-producer/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=service-producer-1
-server.port=8080
+server.port=8081
+kafka.topic.command=command-topic
+kafka.topic.query=query-topic
+kafka.topic.result=result-topic
+kafka.topic.group=my-group
