--- a/service-producer/src/main/resources/application-docker.properties
+++ b/service-producer/src/main/resources/application-docker.properties
@@ -1,1 +1,2 @@
 spring.cloud.zookeeper.connect-string=zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
+spring.kafka.bootstrap-servers=kafka-1:29092,kafka-2:29093,kafka-3:29094
