--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ networks:
     driver: bridge
   producer-kafka:
     driver: bridge
-
+  consumer-kafka:
+    driver: bridge
   producer-mongodb:
     driver: bridge
   consumer-mongodb:
@@ -160,6 +161,7 @@ services:
       - consumer-zookeeper
       - consumer
       - consumer-mongodb
+      - consumer-kafka
 
   kafka-1:
     image: confluentinc/cp-kafka:latest
@@ -181,8 +183,7 @@ services:
       - kafka
       - consumer-zookeeper
       - producer-kafka
-
-
+      - consumer-kafka
   kafka-2:
     image: confluentinc/cp-kafka:latest
     ports:
@@ -203,6 +204,7 @@ services:
       - kafka
       - consumer-zookeeper
       - producer-kafka
+      - consumer-kafka
 
   kafka-3:
     image: confluentinc/cp-kafka:latest
@@ -224,6 +226,7 @@ services:
       - kafka
       - consumer-zookeeper
       - producer-kafka
+      - consumer-kafka
   kafka-ui:
     container_name: kafka-ui
     image: provectuslabs/kafka-ui:latest
